--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,11 +6,12 @@
   = javascript_include_tag 'application', 'data-turbolinks-track' => true 
   = csrf_meta_tags 
   %body
-    %header.main_header
-      #logo
-        %p Berlin's Rails forum
-      #buttons
-        = link_to "New Post", new_post_path
+    %header.main_header.clearfix
+      .wrapper
+        #logo
+          %p BERLIN'S RAILS FORUM
+        #buttons
+          = link_to "New Post", new_post_path
 
     .wrapper
       %p.notice= notice
