--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,10 @@
  *= require_tree .
  *= require_self
  */
+ body{
+  background-image: url("tM2Dqxs.gif");
+  background-repeat: repeat;
+ }
 .wrapper {
   width: 60%;
   max-width: 1140px;
@@ -31,7 +35,7 @@
 .main_header {
   width: 100%;
   margin: -6px;
-  background: #F00C93;
+  background:white;
   padding: 2em 5%;
   border-radius: .5em;
 }
@@ -39,13 +43,21 @@
   float: left;
 }
 
-.main_header #logo a {
+/*.main_header #logo a {
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: -1px;
   font-size: 1.25em;
   text-decoration: none;
   color: #397CAC;
+}*/
+.main_header #logo p{
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: -1px;
+  font-size: 1.25em;
+  text-decoration: none;
+  color: #FF3283;/* pink */
 }
 .main_header #buttons {
   float: right;
@@ -101,7 +113,7 @@
 #post_content h1 {
   font-weight: 100;
   font-size: 2em;
-  color: #397CAC;
+  color: purple;
   margin-top: 0;
 }
 
@@ -169,9 +181,9 @@
   margin: 1em 0;
 }
 
-  padding: 2em 5%;
+/*  padding: 2em 5%;
   border-radius: .5em;
-}
+}*/
 
 #posts .post {
   margin: 1em 0;
@@ -416,13 +428,23 @@
 
 .main_header #buttons a {
   line-height: 60px;
-  background: green;
+  background:#800080; /* green */ 
   padding: 0.5em 1em;
   border-radius: 0.2em;
   color: white;
   text-decoration: none;
   font-weight: 100;
 }
+.button {
+  color: #397CAC;
+  border: 1px solid #397CAC;
+  padding: 0.5em 1em;
+  border-radius: 0.2em;
+  text-decoration: none;
+  margin-right: 2%;
+}
+
+
 #posts {
   background: white;
   padding: 2em 5%;
@@ -452,14 +474,6 @@
   color: #B2BAC2;
 }
 
-.button {
-  color: #397CAC;
-  border: 1px solid #397CAC;
-  padding: 0.5em 1em;
-  border-radius: 0.2em;
-  text-decoration: none;
-  margin-right: 2%;
-}
 
 #post_content {
   background: white;
