--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,9 +1,9 @@
 <div class="comment clearfix">
   <div class="content">
-    <p class="comment_content">
+    <p class="commentcontent">
       <%= comment.comment  %>
     </p>
-    <p class="comment_author">
+    <p class="commentauthor">
       <%= comment.user.email %>
     </p>
   </div>
