--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,11 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true  %>
   <%= csrf_meta_tags  %>
   <body>
-    <header class="main_header clearfix">
+    <header class="mainheader clearfix">
       <div class="wrapper">
         <div id="logo">
           <p>
-            <%= link_to "BERLIN'S RAILS FORUM",root_path %>
+            <%= link_to "BERLIN'S RAILS BLOG FORUM",root_path %>
           </p>
         </div>
         <div id="buttons">
